# Fleet-Manager

./: .gitignore  README.md  docker-compose.yml  podman-compose.yml  prometheus.yml
docs/: ARCHITECHTURE.md
fleet-agent/: .clangd  .containerignore  CMakeLists.txt  CMakePresets.json  config.json  dockerfile  vcpkg.json
fleet-agent/include/agent/: agent.hpp  secure_exec.hpp
fleet-agent/include/metrics/: metrics.hpp
fleet-agent/include/monitor/: all_processes.hpp  disk.hpp  network.hpp  process.hpp  processor.hpp  system.hpp
fleet-agent/include/routes/: routes.hpp
fleet-agent/include/utils/: config.hpp  format.hpp  jwt_validator.hpp  parser_constants.hpp  parser_helper.hpp  system_parser.hpp
fleet-agent/src/: main.cpp
fleet-agent/src/agent/: agent.cpp  secure_exec.cpp
fleet-agent/src/metrics/: metrics.cpp
fleet-agent/src/monitor/: all_processes.cpp  disk.cpp  network.cpp  process.cpp  processor.cpp  system.cpp
fleet-agent/src/routes/: routes.cpp
fleet-agent/src/utils/: config.cpp  format.cpp  jwt_validator.cpp  system_parser.cpp
fleet-backend/: .containerignore  CMakeLists.txt  CMakePresets.json  Containerfile  config.json  dockerfile  fleet.db  vcpkg.json
fleet-backend/include/routes/: node_routes.hpp
fleet-backend/include/server/: server.hpp
fleet-backend/include/services/: agent_client.hpp  db_service.hpp
fleet-backend/include/utils/: config.hpp  jwt_validator.hpp
fleet-backend/src/: main.cpp
fleet-backend/src/routes/: node_routes.cpp
fleet-backend/src/server/: server.cpp
fleet-backend/src/services/: agent_client.cpp  db_service.cpp
fleet-backend/src/utils/: config.cpp
fleet-ui/: .dockerignore  Dockerfile  dockerfile  package-lock.json  package.json
fleet-ui/app/: globals.css  layout.tsx  page.tsx
fleet-ui/app/dashboard/: layout.tsx  page.tsx
fleet-ui/app/dashboard/command-center/: page.tsx
fleet-ui/app/dashboard/overview/: page.tsx
fleet-ui/app/dashboard/shell/: page.tsx
fleet-ui/components/: app-sidebar.tsx
fleet-ui/components/command-center/: columns.tsx  terminal.tsx
fleet-ui/components/overview/: kpi-cards.tsx  node_table.tsx
fleet-ui/components/shell/: shell.tsx
fleet-ui/components/ui/: sidebar.tsx
fleet-ui/lib/: api.ts
fleet-ui/providers/: app-providers.tsx  node-provider.tsx
fleet-ui/types/: index.ts
